--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "fe-exercise",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://fetch-hiring.s3.amazonaws.com",
+  "homepage": "https://yonicelleyva.github.io/fe-excercise/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "gestalt": "^14.28.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
@@ -15,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
